feat(index): Add link to Mint Chicken recipe page
Added a link to the Mint Chicken recipe page in
the index.html file. Placed the link under the
<h1>Odin Recipes</h1> heading, linking to
"recipes/mint_chicken.html" with the text
"Mint Chicken".

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>
       Odin Recipes
     </h1>
+    <a href="./recipes/mint_chicken.html">
+      Mint Chicken
+    </a>
   </body>
 </html>
