feat(index): Update new recipe links to index page
Modified the index.html file to include
links to the new recipe pages. Organized the links
in an unordered list so that they are not all on
one line.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,22 @@
     <h1>
       Odin Recipes
     </h1>
-    <a href="./recipes/mint_chicken.html">
-      Mint Chicken
-    </a>
+    <ul>
+      <li>
+        <a href="./recipes/mint_chicken.html">
+          Mint Chicken
+        </a>
+      </li>
+      <li>
+        <a href="./recipes/caramel_roll.html">
+          Caramel Rolls
+        </a>
+      </li>
+      <li>
+        <a href="./recipes/carrot_fennel.html">
+          Orange-Maple Roasted Carrots and Fennel
+        </a>
+      </li>
+    </ul>
   </body>
 </html>
