--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      Odin Recipes
+      Odin Recipes | Homepage
     </title>
   </head>
   <body>
