feat(images): Add alt text to recipe images
Added descriptive alt text to the images of the
finished dish in the recipe HTML files to improve
accessibility and SEO.

--- a/recipes/caramel_roll.html
+++ b/recipes/caramel_roll.html
@@ -11,7 +11,7 @@
       Caramel Rolls
     </h1>
     <img src="../images/caramel_rolls.jpg" 
-    alt="" width="350">
+    alt="fiished dish of caramel rolls" width="350">
     <h3>
       Description
     </h3>
