--- a/recipes/carrot_fennel.html
+++ b/recipes/carrot_fennel.html
@@ -11,7 +11,7 @@
       Orange-Maple Roasted Carrots and Fennel
     </h1>
     <img src="../images/carrots_fennel.jpg" 
-    alt="" width="350">
+    alt="finished dish of orange-maple roasted carrots and fennel" width="350">
     <h3>
       Description
     </h3>
