--- a/recipes/mint_chicken.html
+++ b/recipes/mint_chicken.html
@@ -11,7 +11,7 @@
       Mint Chicken
     </h1>
     <img src="../images/mint_chicken.jpg" 
-    alt="" width="350">
+    alt="finished dish of mint-chicken" width="350">
     <h3>
       Description
     </h3>
