feat(index): Update class attributes to elements
Added a class attribute of "hero-heading" to <h1>
element in the index.html file. To enable higher
specifity value and avoid cascade issues.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>
       Odin Recipes | Homepage
     </title>
   </head>
   <body>
-    <h1>
+    <h1 class="hero-heading">
       Odin Recipes
     </h1>
     <ul>
