feat(index) Update security features to <a> links
Added target attributes with _blank value and rel
attributes with noopener noreferrer values. This is
to add security to webpages and prevent tabnabbing
and phishing attacks.

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     </h1>
     <ul>
       <li>
-        <a href="./recipes/mint_chicken.html">
+        <a href="./recipes/mint_chicken.html" target="_blank" rel="noopener noreferrer">
           Mint Chicken
         </a>
       </li>
       <li>
-        <a href="./recipes/caramel_roll.html">
+        <a href="./recipes/caramel_roll.html" target="_blank" rel="noopener noreferrer">
           Caramel Rolls
         </a>
       </li>
       <li>
-        <a href="./recipes/carrot_fennel.html">
+        <a href="./recipes/carrot_fennel.html" target="_blank" rel="noopener noreferrer">
           Orange-Maple Roasted Carrots and Fennel
         </a>
       </li>
