feat(recipe pages): Update class attributes and links .css files
Added class attributes to elements and linked a .css
file to the recipe pages to enable css styles to be
applied to the files.

--- a/recipes/caramel_roll.html
+++ b/recipes/caramel_roll.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="recipe-styles.css">
     <title>
       Odin Recipes | Caramel Rolls
     </title>
   </head>
   <body>
-    <h1>
+    <h1 class="hero-heading">
       Caramel Rolls
     </h1>
     <img src="../images/caramel_rolls.jpg" 
