--- a/recipes/mint_chicken.html
+++ b/recipes/mint_chicken.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="recipe-styles.css">
     <title>
       Odin Recipes | Mint Chicken
     </title>
   </head>
   <body>
-    <h1>
+    <h1 class="hero-heading">
       Mint Chicken
     </h1>
     <img src="../images/mint_chicken.jpg" 
