--- a/recipes/carrot_fennel.html
+++ b/recipes/carrot_fennel.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="recipe-styles.css">
     <title>
       Odin Recipes | Orange-Maple Roasted Carrots and Fennel
     </title>
   </head>
   <body>
-    <h1>
+    <h1 class="hero-heading">
       Orange-Maple Roasted Carrots and Fennel
     </h1>
     <img src="../images/carrots_fennel.jpg" 
