feat(pages): Update class attributes
Added a class attribut "ingredients" to the <ul>
element for the ingredients list to differentiate
css rules and styles applied between ingredient
list and directions list.

--- a/recipes/caramel_roll.html
+++ b/recipes/caramel_roll.html
@@ -23,7 +23,7 @@
     <h4>
       Ingredients
     </h4>
-    <ul>
+    <ul class="ingredients">
       <strong>Dough:</strong>
       <li>¾ cup water</li>
       <li>2 tablespoons butter</li>
