--- a/recipes/carrot_fennel.html
+++ b/recipes/carrot_fennel.html
@@ -25,7 +25,7 @@
     <h4>
       Ingredients
     </h4>
-    <ul>
+    <ul class="Ingredients">
       <li>4 medium carrots, washed and trimmed</li>
       <li>1 medium fennel bulb</li>
       <li>½ teaspoon salt</li>
