--- a/recipes/mint_chicken.html
+++ b/recipes/mint_chicken.html
@@ -23,7 +23,7 @@
     <h4>
       Ingredients
     </h4>
-    <ul>
+    <ul class="ingredients">
       <li>2 skinless, boneless chicken breast halves - cut into bite-size pieces</li>
       <li>1 clove garlic, crushed</li>
       <li>½ cup all-purpose flour</li>
