feat(index): Update more content on the homepage
Added <div> elements to contain more content for the
homepage including wrapping the <ul> in a <div>,
adding a <p> and an <img> elements. This is to add
more content on the page. Also added class attributes
to <div> elements to enable application of css styles
to the elements and the content they contain.

--- a/index.html
+++ b/index.html
@@ -11,22 +11,39 @@
     <h1 class="hero-heading">
       Odin Recipes
     </h1>
-    <ul>
-      <li>
-        <a href="./recipes/mint_chicken.html" target="_blank" rel="noopener noreferrer">
-          Mint Chicken
-        </a>
-      </li>
-      <li>
-        <a href="./recipes/caramel_roll.html" target="_blank" rel="noopener noreferrer">
-          Caramel Rolls
-        </a>
-      </li>
-      <li>
-        <a href="./recipes/carrot_fennel.html" target="_blank" rel="noopener noreferrer">
-          Orange-Maple Roasted Carrots and Fennel
-        </a>
-      </li>
-    </ul>
+    <div class="links">
+        <ul>
+          <li>
+            <a href="./recipes/mint_chicken.html" target="_blank" rel="noopener noreferrer">
+              Mint Chicken
+            </a>
+          </li>
+          <li>
+            <a href="./recipes/caramel_roll.html" target="_blank" rel="noopener noreferrer">
+              Caramel Rolls
+            </a>
+          </li>
+          <li>
+            <a href="./recipes/carrot_fennel.html" target="_blank" rel="noopener noreferrer">
+              Orange-Maple Roasted Carrots and Fennel
+            </a>
+          </li>
+      </ul>
+    </div>
+    <div class="container">
+      <h3>Welcome to Odin Recipes</h3>
+      <div class="content">
+        <div class="image-container">
+          <img src="./images/fish.jpg" alt="a meal comprising of fish, pasta and several other seafood dishes" width="750">
+        </div>
+        <p>
+          Explore a collection of delicious recipes designed to tantalise your tastebuds and inspire your inner chef.
+          Whether you're a seasoned cook or just starting in the kitchen, Odin Recipes has something for everyone.
+          Find easy-to-follow recipes for weeknight meals, impressive dishes for special ocassions, and everything in between. 
+          Browse by category, search for specific ingredients, or discover new favourites based on your dieatry preferences.<br>
+          With Odin Recipes, you'll never be at a loss for what to cook again. Let's get cooking.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
